--- a/MyMap/Base.lproj/Main.storyboard
+++ b/MyMap/Base.lproj/Main.storyboard
@@ -18,36 +18,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="9kK-VC-7Ep">
-                                <rect key="frame" x="0.0" y="126" width="414" height="736"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="9kK-VC-7Ep">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </mapView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HiE-xu-H2M">
-                                <rect key="frame" x="166" y="69" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="HiE-xu-H2M" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="03P-Dn-d5P"/>
-                            <constraint firstItem="HiE-xu-H2M" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="5AD-Ub-TYp"/>
-                            <constraint firstItem="HiE-xu-H2M" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Jyh-bA-Hcc"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HiE-xu-H2M" secondAttribute="trailing" id="NHq-HB-bhA"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9kK-VC-7Ep" secondAttribute="trailing" id="OvN-FH-5Pe"/>
-                            <constraint firstItem="9kK-VC-7Ep" firstAttribute="top" secondItem="HiE-xu-H2M" secondAttribute="bottom" id="QIW-bY-DIF"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HiE-xu-H2M" secondAttribute="trailing" id="Rv8-bo-hOy"/>
-                            <constraint firstItem="HiE-xu-H2M" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="V4g-GK-tZw"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9kK-VC-7Ep" secondAttribute="bottom" id="Vuc-df-ku9"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HiE-xu-H2M" secondAttribute="trailing" id="aB6-Qw-50E"/>
+                            <constraint firstItem="9kK-VC-7Ep" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Xyl-Wc-W5d"/>
                             <constraint firstItem="9kK-VC-7Ep" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ghc-js-CnJ"/>
-                            <constraint firstItem="HiE-xu-H2M" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="qq6-h1-d8r"/>
                             <constraint firstItem="9kK-VC-7Ep" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="rKs-pA-ce4"/>
+                            <constraint firstItem="9kK-VC-7Ep" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="sNk-CS-tEW"/>
+                            <constraint firstAttribute="trailing" secondItem="9kK-VC-7Ep" secondAttribute="trailing" id="tZ8-c1-eYu"/>
+                            <constraint firstAttribute="bottom" secondItem="9kK-VC-7Ep" secondAttribute="bottom" id="uJP-Id-osR"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="label" destination="HiE-xu-H2M" id="AS5-uP-Orz"/>
                         <outlet property="mapVIew" destination="9kK-VC-7Ep" id="x1e-0X-Raf"/>
                     </connections>
                 </viewController>
